INCLUDE_DIRECTORIES(/usr/include/hello)
message(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})
SET(MYINCLUDEDIR ${HELLO_SOURCE_DIR}/lib)
message(STATUS "This is MYINCLUDEDIR " ${MYINCLUDEDIR})
include_directories(${MYINCLUDEDIR})
add_executable(main main.c)
target_link_libraries(main hello_static)
